--- a/index.html
+++ b/index.html
@@ -1,27 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+     <!-- Required meta tags
+      meta viewport → makes the page responsive on mobile.
+     -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>  
-        <nav>
-            <a href="index.html">Home</a> |
-            <a href="./pages/about.html">About</a> |
-            <a href="./pages/contact.html">Contact</a>
-        </nav>
-        <h1>Hi, I'm Vanja, </br> a Web Developer</h1>
+
+
+<div class="px-3 py-2 text-bg-dark border-bottom">
+  <div class="container">
+    <div class="d-flex flex-wrap align-items-center">
+
+
+      <!-- Navigation -->
+      <ul class="nav col-12 col-lg-auto my-2 my-md-0 text-small ms-auto">
+        <li>
+          <a href="#" class="nav-link text-black">
+            <img src="./assets/home.svg" alt="House" class="d-block mx-auto mb-1" width="24" height="24">
+            Home
+          </a>
+        </li>
+        <li>
+          <a href="./pages/about.html" class="nav-link text-black">
+            <img src="./assets/briefcase.svg" alt="Portfolio" class="d-block mx-auto mb-1" width="24" height="24">
+            Portfolio
+          </a>
+        </li>
+        <li>
+          <a href="./pages/contact.html" class="nav-link text-black">
+            <img src="./assets/envelope.svg" alt="Contact" class="d-block mx-auto mb-1" width="24" height="24">
+            Contact
+          </a>
+        </li>
+      </ul>
+
+    </div>
+  </div>
+</div>
+
     </header>
 
     <main>
-        <img src="assets/Vanja.png" alt="my picture">
-        <p>Welcome to my portfolio. I'm a web developer focused on building clean and functional websites. </p>
-        <button id="myButton">Get in touch</button>
+        <div class="container col-xxl-8 px-4 py-5"> 
+            <div class="row flex-lg-row-reverse align-items-center g-5 py-5"> 
+                <div class="col-10 col-sm-8 col-lg-6"> 
+                    <img src="assets/Vanja.png" class="d-block mx-lg-auto img-fluid" alt="my picture" width="700" height="500" loading="lazy"> 
+                </div> <div class="col-lg-6"> <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Hi, I'm Vanja, </br> a Web Developer</h1> 
+                    <p class="lead">Welcome to my portfolio. I'm a web developer focused on building clean and functional websites.</p> 
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-start"> 
+                        <button id="myButton" type="button" class="btn btn-primary btn-lg px-4 me-md-2">Get in touch</button> 
+                    </div> 
+                </div> 
+            </div> 
+        </div>
     </main>
 
+    <footer>
+        <p>© 2025 My Website. All rights reserved.</p>
+    </footer>
+
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
