updated footer and added new feature

--- a/index.html
+++ b/index.html
@@ -1,75 +1,249 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-     <!-- Required meta tags
-      meta viewport → makes the page responsive on mobile.
-     -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      crossorigin="anonymous"
+    />
+
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>  
-
-
-<div class="px-3 py-2 text-bg-dark border-bottom">
-  <div class="container">
-    <div class="d-flex flex-wrap align-items-center">
-
-
-      <!-- Navigation -->
-      <ul class="nav col-12 col-lg-auto my-2 my-md-0 text-small ms-auto">
-        <li>
-          <a href="#" class="nav-link text-black">
-            <img src="./assets/home.svg" alt="House" class="d-block mx-auto mb-1" width="24" height="24">
-            Home
-          </a>
-        </li>
-        <li>
-          <a href="./pages/about.html" class="nav-link text-black">
-            <img src="./assets/briefcase.svg" alt="Portfolio" class="d-block mx-auto mb-1" width="24" height="24">
-            Portfolio
-          </a>
-        </li>
-        <li>
-          <a href="./pages/contact.html" class="nav-link text-black">
-            <img src="./assets/envelope.svg" alt="Contact" class="d-block mx-auto mb-1" width="24" height="24">
-            Contact
-          </a>
-        </li>
-      </ul>
-
-    </div>
-  </div>
-</div>
-
-    </header>
-
-    <main>
-        <div class="container col-xxl-8 px-4 py-5"> 
-            <div class="row flex-lg-row-reverse align-items-center g-5 py-5"> 
-                <div class="col-10 col-sm-8 col-lg-6"> 
-                    <img src="assets/Vanja.png" class="d-block mx-lg-auto img-fluid" alt="my picture" width="700" height="500" loading="lazy"> 
-                </div> <div class="col-lg-6"> <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Hi, I'm Vanja, </br> a Web Developer</h1> 
-                    <p class="lead">Welcome to my portfolio. I'm a web developer focused on building clean and functional websites.</p> 
-                    <div class="d-grid gap-2 d-md-flex justify-content-md-start"> 
-                        <button id="myButton" type="button" class="btn btn-primary btn-lg px-4 me-md-2">Get in touch</button> 
-                    </div> 
-                </div> 
-            </div> 
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!-- Header / Navigation -->
+    <section id="header" class="header">
+      <header>
+        <div class="px-3 py-4">
+          <div class="container">
+            <div
+              class="d-flex flex-wrap align-items-center justify-content-end"
+            >
+              <form
+                class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3"
+                role="search"
+              >
+                <input
+                  type="search"
+                  class="form-control form-control-dark text-bg-dark"
+                  placeholder="Search..."
+                  aria-label="Search"
+                />
+              </form>
+              <ul
+                class="nav col-12 col-lg-auto my-2 my-md-0 text-small ms-auto"
+              >
+                <li>
+                  <a href="#" class="nav-link">
+                    <img
+                      src="./assets/home.svg"
+                      alt="Home"
+                      class="d-block mx-auto mb-1"
+                      width="24"
+                      height="24"
+                    />
+                    Home
+                  </a>
+                </li>
+                <li>
+                  <a href="./pages/about.html" class="nav-link">
+                    <img
+                      src="./assets/briefcase.svg"
+                      alt="Portfolio"
+                      class="d-block mx-auto mb-1"
+                      width="24"
+                      height="24"
+                    />
+                    Portfolio
+                  </a>
+                </li>
+                <li>
+                  <a href="./pages/contact.html" class="nav-link">
+                    <img
+                      src="./assets/envelope.svg"
+                      alt="Contact"
+                      class="d-block mx-auto mb-1"
+                      width="24"
+                      height="24"
+                    />
+                    Contact
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
-    </main>
+      </header>
+    </section>
 
-    <footer>
-        <p>© 2025 My Website. All rights reserved.</p>
-    </footer>
+    <!-- Main / Hero Section -->
+    <section id="title" class="body">
+      <main>
+        <div class="container col-xxl-8 mb-3">
+          <div class="row flex-lg-row-reverse align-items-center">
+            <!-- Image -->
+            <div class="col-10 col-sm-8 col-lg-6">
+              <img
+                src="assets/Vanja.png"
+                class="d-block mx-lg-auto img-fluid"
+                alt="my picture"
+                width="700"
+                height="500"
+                loading="lazy"
+              />
+            </div>
+            <!-- Text + Button -->
+            <div class="col-lg-6">
+              <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">
+                Hi, I'm Vanja, <br />
+                a Web Developer
+              </h1>
+              <p class="lead">
+                Welcome to my portfolio. I'm a web developer focused on building
+                clean and functional websites.
+              </p>
+              <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                <button
+                  id="myButton"
+                  type="button"
+                  class="btn btn-lg px-4 me-md-2"
+                >
+                  Get in touch
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
 
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 1000 100"
+          preserveAspectRatio="none"
+        >
+          <path
+            class="elementor-shape-fill"
+            fill="#dfb0b0"
+            d="M790.5,93.1c-59.3-5.3-116.8-18-192.6-50c-29.6-12.7-76.9-31-100.5-35.9c-23.6-4.9-52.6-7.8-75.5-5.3
+c-10.2,1.1-22.6,1.4-50.1,7.4c-27.2,6.3-58.2,16.6-79.4,24.7c-41.3,15.9-94.9,21.9-134,22.6C72,58.2,0,25.8,0,25.8V100h1000V65.3
+c0,0-51.5,19.4-106.2,25.7C839.5,97,814.1,95.2,790.5,93.1z"
+          ></path>
+        </svg>
+      </main>
+    </section>
+
+    <div class="container features">
+      <!-- Three columns of text below the carousel -->
+      <h2 class=" px-0  mt-5">What I do:</h2>
+      <div class="row py-3">
+        <div class="col-lg-4 py-4">
+          <svg
+            aria-label="Placeholder"
+            class="bd-placeholder-img rounded-circle"
+            height="140"
+            preserveAspectRatio="xMidYMid slice"
+            role="img"
+            width="140"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <title>Placeholder</title>
+            <rect
+              width="100%"
+              height="100%"
+              fill="var(--bs-secondary-color)"
+            ></rect>
+          </svg>
+          <h2 class="fw-normal">Responsive</h2>
+          <p>
+            I create easy-to-use and responsive sites that work across all
+            devices.
+          </p>
+        </div>
+        <!-- /.col-lg-4 -->
+        <div class="col-lg-4 py-4">
+          <svg
+            aria-label="Placeholder"
+            class="bd-placeholder-img rounded-circle"
+            height="140"
+            preserveAspectRatio="xMidYMid slice"
+            role="img"
+            width="140"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <title>Modern Technologies</title>
+            <rect
+              width="100%"
+              height="100%"
+              fill="var(--bs-secondary-color)"
+            ></rect>
+          </svg>
+          <h2 class="fw-normal">Custom Design</h2>
+          <p>
+            I use the latest web development tools and frameworks to ensure your
+            website is up to date.
+          </p>
+        </div>
+        <!-- /.col-lg-4 -->
+        <div class="col-lg-4 py-4">
+          <svg
+            aria-label="Placeholder"
+            class="bd-placeholder-img rounded-circle"
+            height="140"
+            preserveAspectRatio="xMidYMid slice"
+            role="img"
+            width="140"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <title>Placeholder</title>
+            <rect
+              width="100%"
+              height="100%"
+              fill="var(--bs-secondary-color)"
+            ></rect>
+          </svg>
+          <h2 class="fw-normal">Heading</h2>
+          <p>
+            Every website I create is tailored to fit the specific needs and
+            goals of each project, providing a unique online experience.
+          </p>
+        </div>
+        <!-- /.col-lg-4 -->
+      </div>
+    </div>
+
+    <!-- Footer -->
+    <section id="footer" class="bottom">
+      <footer>
+        <div class="container">
+          <ul class="nav justify-content-center mb-2">
+            <li class="nav-item">
+              <a href="#" class="nav-link px-2">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="./pages/about.html" class="nav-link px-2">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a href="./pages/contact.html" class="nav-link px-2">Contact</a>
+            </li>
+          </ul>
+          <p class="text-center">
+            ©2025 Vanja Brkan Stankic. All rights reserved.
+          </p>
+        </div>
+      </footer>
+    </section>
+
+    <!-- Scripts -->
     <script src="script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
