--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <section id="header" class="header">
       <header>
         <div class="px-3 py-4">
+          <!-- Padding for top/bottom (Bootstrap spacing) -->
           <div class="container">
+            <!-- Search Form -->
             <div
               class="d-flex flex-wrap align-items-center justify-content-end"
             >
@@ -36,11 +38,13 @@
                   aria-label="Search"
                 />
               </form>
+              <!-- Navigation Links -->
               <ul
                 class="nav col-12 col-lg-auto my-2 my-md-0 text-small ms-auto"
               >
+                <!-- Home Link -->
                 <li>
-                  <a href="#" class="nav-link">
+                  <a href="#" class="nav-link text-muted">
                     <img
                       src="./assets/home.svg"
                       alt="Home"
@@ -51,8 +55,9 @@
                     Home
                   </a>
                 </li>
+                <!-- Portfolio Link -->
                 <li>
-                  <a href="./pages/about.html" class="nav-link">
+                  <a href="./pages/about.html" class="nav-link text-muted">
                     <img
                       src="./assets/briefcase.svg"
                       alt="Portfolio"
@@ -63,8 +68,9 @@
                     Portfolio
                   </a>
                 </li>
+                <!-- Contact Link -->
                 <li>
-                  <a href="./pages/contact.html" class="nav-link">
+                  <a href="./pages/contact.html" class="nav-link text-muted">
                     <img
                       src="./assets/envelope.svg"
                       alt="Contact"
@@ -83,7 +89,7 @@
     </section>
 
     <!-- Main / Hero Section -->
-    <section id="title" class="body">
+    <section id="hero" class="hero">
       <main>
         <div class="container col-xxl-8 mb-3">
           <div class="row flex-lg-row-reverse align-items-center">
@@ -120,7 +126,7 @@
             </div>
           </div>
         </div>
-
+        <!-- SVG container -->
         <svg
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 1000 100"
@@ -137,101 +143,85 @@ c0,0-51.5,19.4-106.2,25.7C839.5,97,814.1,95.2,790.5,93.1z"
       </main>
     </section>
 
-    <div class="container features">
-      <!-- Three columns of text below the carousel -->
-      <h2 class=" px-0  mt-5">What I do:</h2>
-      <div class="row py-3">
-        <div class="col-lg-4 py-4">
-          <svg
-            aria-label="Placeholder"
-            class="bd-placeholder-img rounded-circle"
-            height="140"
-            preserveAspectRatio="xMidYMid slice"
-            role="img"
-            width="140"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <title>Placeholder</title>
-            <rect
-              width="100%"
-              height="100%"
-              fill="var(--bs-secondary-color)"
-            ></rect>
-          </svg>
-          <h2 class="fw-normal">Responsive</h2>
-          <p>
-            I create easy-to-use and responsive sites that work across all
-            devices.
-          </p>
-        </div>
-        <!-- /.col-lg-4 -->
-        <div class="col-lg-4 py-4">
-          <svg
-            aria-label="Placeholder"
-            class="bd-placeholder-img rounded-circle"
-            height="140"
-            preserveAspectRatio="xMidYMid slice"
-            role="img"
-            width="140"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <title>Modern Technologies</title>
-            <rect
-              width="100%"
-              height="100%"
-              fill="var(--bs-secondary-color)"
-            ></rect>
-          </svg>
-          <h2 class="fw-normal">Custom Design</h2>
-          <p>
-            I use the latest web development tools and frameworks to ensure your
-            website is up to date.
-          </p>
-        </div>
-        <!-- /.col-lg-4 -->
-        <div class="col-lg-4 py-4">
-          <svg
-            aria-label="Placeholder"
-            class="bd-placeholder-img rounded-circle"
-            height="140"
-            preserveAspectRatio="xMidYMid slice"
-            role="img"
-            width="140"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <title>Placeholder</title>
-            <rect
-              width="100%"
-              height="100%"
-              fill="var(--bs-secondary-color)"
-            ></rect>
-          </svg>
-          <h2 class="fw-normal">Heading</h2>
-          <p>
-            Every website I create is tailored to fit the specific needs and
-            goals of each project, providing a unique online experience.
-          </p>
-        </div>
-        <!-- /.col-lg-4 -->
-      </div>
-    </div>
+    <!-- Features Section -->
+    <section id="features" class="features">
+      <div class="container features">
+        <!-- Three columns of text below the carousel -->
+        <h2 class="px-0 mt-5">What I do:</h2>
+        <!-- Row for three columns -->
+        <div class="row py-3">
+          <!-- First Feature Column -->
+          <div class="col-lg-4 py-4">
+            <img
+              src="./assets/1.png"
+              class="rounded-oval border border-3 border-secondary"
+              width="140"
+              height="140"
+            />
 
-    <!-- Footer -->
+            <h2 class="fw-normal">Responsive</h2>
+            <p>
+              I create easy-to-use and responsive sites that work across all
+              devices.
+            </p>
+          </div>
+          <!-- Second Feature Column -->
+          <div class="col-lg-4 py-4">
+            <img
+              src="./assets/2.png"
+              class="rounded-oval border border-3 border-secondary"
+              width="140"
+              height="140"
+            />
+            <h2 class="fw-normal">Modern Technologies</h2>
+            <p>
+              I use the latest web development tools and frameworks to ensure
+              your website is up to date.
+            </p>
+          </div>
+          <!-- Third Feature Column -->
+          <div class="col-lg-4 py-4">
+            <img
+              src="./assets/3.png"
+              class="rounded-oval border border-3 border-secondary"
+              width="140"
+              height="140"
+            />
+            <h2 class="fw-normal">Custom Design</h2>
+            <p>
+              Every website I create is tailored to fit the specific needs and
+              goals of each project, providing a unique online experience.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer Section -->
     <section id="footer" class="bottom">
       <footer>
         <div class="container">
+          <!-- Footer Navigation Links -->
           <ul class="nav justify-content-center mb-2">
+            <!-- Home Link -->
             <li class="nav-item">
-              <a href="#" class="nav-link px-2">Home</a>
+              <a href="#" class="nav-link px-2 text-muted">Home</a>
             </li>
+            <!-- Portfolio Link -->
             <li class="nav-item">
-              <a href="./pages/about.html" class="nav-link px-2">Portfolio</a>
+              <a href="./pages/about.html" class="nav-link px-2 text-muted"
+                >Portfolio</a
+              >
             </li>
+            <!-- Contact Link -->
             <li class="nav-item">
-              <a href="./pages/contact.html" class="nav-link px-2">Contact</a>
+              <a href="./pages/contact.html" class="nav-link px-2 text-muted"
+                >Contact</a
+              >
             </li>
           </ul>
-          <p class="text-center">
+          <!-- Copyright Text -->
+          <p class="text-center text-muted">
             ©2025 Vanja Brkan Stankic. All rights reserved.
           </p>
         </div>
