added contact page

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               >
                 <!-- Home Link -->
                 <li>
-                  <a href="#" class="nav-link text-muted">
+                  <a href="./index.html" class="nav-link text-muted">
                     <img
                       src="./assets/home.svg"
                       alt="Home"
@@ -91,7 +91,7 @@
     <!-- Main / Hero Section -->
     <section id="hero" class="hero">
       <main>
-        <div class="container col-xxl-8 mb-3">
+        <div class="container col-xxl-8 pb-3">
           <div class="row flex-lg-row-reverse align-items-center">
             <!-- Image -->
             <div class="col-10 col-sm-8 col-lg-6">
@@ -106,7 +106,7 @@
             </div>
             <!-- Text + Button -->
             <div class="col-lg-6">
-              <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">
+              <h1 class="display-5 fw-bold text-body-emphasis lh-1 pb-3">
                 Hi, I'm Vanja, <br />
                 a Web Developer
               </h1>
@@ -147,14 +147,14 @@ c0,0-51.5,19.4-106.2,25.7C839.5,97,814.1,95.2,790.5,93.1z"
     <section id="features" class="features">
       <div class="container features">
         <!-- Three columns of text below the carousel -->
-        <h2 class="px-0 mt-5">What I do:</h2>
+        <h2 class="px-0 pt-5">What I do:</h2>
         <!-- Row for three columns -->
         <div class="row py-3">
           <!-- First Feature Column -->
-          <div class="col-lg-4 py-4">
+          <div class="col-lg-4 py-1">
             <img
               src="./assets/1.png"
-              class="rounded-oval border border-3 border-secondary"
+              class="rounded-oval border border-3 border-secondary mb-2"
               width="140"
               height="140"
             />
@@ -166,10 +166,10 @@ c0,0-51.5,19.4-106.2,25.7C839.5,97,814.1,95.2,790.5,93.1z"
             </p>
           </div>
           <!-- Second Feature Column -->
-          <div class="col-lg-4 py-4">
+          <div class="col-lg-4 py-1">
             <img
               src="./assets/2.png"
-              class="rounded-oval border border-3 border-secondary"
+              class="rounded-oval border border-3 border-secondary mb-2"
               width="140"
               height="140"
             />
@@ -180,10 +180,10 @@ c0,0-51.5,19.4-106.2,25.7C839.5,97,814.1,95.2,790.5,93.1z"
             </p>
           </div>
           <!-- Third Feature Column -->
-          <div class="col-lg-4 py-4">
+          <div class="col-lg-4 py-1">
             <img
               src="./assets/3.png"
-              class="rounded-oval border border-3 border-secondary"
+              class="rounded-oval border border-3 border-secondary mb-2"
               width="140"
               height="140"
             />
@@ -195,12 +195,11 @@ c0,0-51.5,19.4-106.2,25.7C839.5,97,814.1,95.2,790.5,93.1z"
           </div>
         </div>
       </div>
-
     </section>
 
     <!-- Footer Section -->
     <section id="footer" class="bottom">
-              <div
+      <div
         class="elementor-shape elementor-shape-bottom"
         aria-hidden="true"
         data-negative="false"
