--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,94 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact me</title>
-    <link rel="stylesheet" href="../pages/contact.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <title>Contact Form</title>
+    <link rel="stylesheet" href="contact.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="form-container" id="contactForm">
-        <h1>Get in touch</h1>
-        <p>Fill out the form below to contact me</p>
-        <form>
-          <div class="input-group">
-            <div class="input-field">
-              <i class="fas fa-user"></i>
-              <input
-                type="text"
-                name="name"
-                id="name"
-                placeholder="Name"
-                required
-              />
-            </div>
-
-            <div class="input-field">
-              <i class="fas fa-envelope"></i>
-              <input
-                type="text"
-                name="email"
-                id="email"
-                placeholder="E-mail"
-                required
-              />
-            </div>
-
-            <div class="input-field">
-              <i class="fas fa-phone"></i>
-              <input
-                type="tel"
-                name="phone"
-                id="phone"
-                placeholder="Phone (optional)"
-              />
-            </div>
-
-            <div class="input-field">
-              <i class="fas fa-tag"></i>
-              <input
-                type="text"
-                name="subject"
-                id="subject"
-                placeholder="Subject"
-                required
-              />
-            </div>
-          </div>
-          <div class="message-field">
-            <i class="fas fa-message"></i>
-            <textarea
-              type="text"
-              name="subject"
-              id="subject"
-              placeholder="Your message"
-              required
-            ></textarea>
-          </div>
-          <button type="submit">
-            <div calss="btn-content">
-              <span>Send Message </span>
-              <i class="fas fa-plane"></i>
-            </div>
-          </button>
-        </form>
-      </div>
+    <div class="contact-container">
+      <h1>Get in touch</h1>
+      <p>Fill out the form below to contact me</p>
+      <form>
+        <div class="input-group">
+          <input type="text" name="name" placeholder="Your Name" required />
+          <input type="email" name="email" placeholder="Your Email" required />
+          <input type="text" name="subject" placeholder="Subject" required />
+          <input type="tel" name="phone" placeholder="Phone (optional)" />
+        </div>
+        <textarea name="message" placeholder="Your Message" required></textarea>
+        <button type="submit">Send Message</button>
+      </form>
     </div>
-    <!-- Scripts -->
-    <script src="script.js"></script>
-        <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
