--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
               class="d-flex flex-wrap align-items-center justify-content-end"
             >
               <form
-                class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3"
+                class="col-12 col-lg-auto mb-lg-0"
                 role="search"
               >
                 <input
                   type="search"
-                  class="form-control form-control-dark text-bg-dark"
+                  class="form-control"
                   placeholder="Search..."
                   aria-label="Search"
                 />
